GNOME Bugzilla – Bug 749809
dashdemux: Incorrect example launch line in the dash demux description.
Last modified: 2015-05-25 10:14:19 UTC
This example launch line should be modified to fit the current version.
Created attachment 303895 [details] [review] Fixed incorrect example launch line in the description.
commit f6cc8d13e05613e48693acae6dea51aaa746de64 Author: Suhwang Kim <suhwang.kim@lge.com> Date: Mon May 25 10:30:55 2015 +0900 dashdemux: fix outdated example launch line https://bugzilla.gnome.org/show_bug.cgi?id=749809