dashdemux: fix outdated example launch line

https://bugzilla.gnome.org/show_bug.cgi?id=749809